syntax = "proto3";

package pb;

option csharp_namespace="pb";

import "result.proto";
import "userinfo.proto";

message LoginRequest {
  string UserID = 1;
  string Password = 2;
  int32 Status = 3;
}

message LoginResponse {
  Result Result = 1;
  UserInfo User = 2;
}